--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
     <meta charset="UFT-8">
     <title>Comic Viewer</title>
     <link href = "css/style.css" rel = "stylesheet">
-    <script src="js/angular.min.js"></script>
-    <script src="js/jquery.js" ></script>
-    <script src="js/dnd.js" ></script>
-    <script src="js/app.js" ></script>
   </head>
   <body>
     <span class="zoom" id="frame">
@@ -19,8 +15,14 @@
           <a class = "controlbutton left" id="nextbtn">Next</a>
           <a class = "controlbutton left" id="prevbtn">Previous</a>
           <a class = "controlbutton left" id="lastbtn">Last</a>
+          <div id="alert"></div>
           <a class = "controlbutton right" id="openbtn">Open</a>
       </div>
     </div> 
+    
+    <script src="js/lib/zip.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/dnd.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
