Pictures now display

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <link href = "css/style.css" rel = "stylesheet">
   </head>
   <body>
-    <label id = "page_count">100</label>
     <div id="image_display">
+      <img>
+      <label id = "page_count">100</label>
     </div>
     <div class = "controlbar">	
       <div class = "container">
           <a class = "controlbutton left" id="frstbtn">First</a>
-          <a class = "controlbutton left" id="nextbtn">Next</a>
           <a class = "controlbutton left" id="prevbtn">Previous</a>
+          <a class = "controlbutton left" id="nextbtn">Next</a>
           <a class = "controlbutton left" id="lastbtn">Last</a>
           <a class = "controlbutton right" id="openbtn">Open</a>
       </div>
