Images will load but crashes with larger files and keyboard controls added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link href = "css/style.css" rel = "stylesheet">
   </head>
   <body>
-    <div id="image_display">
+    <div class="frame" id="image_display">
       <img>
       <label id = "page_count">100</label>
     </div>
-    <div class = "controlbar">	
+    <div class = "controlbar" id = "menubar">	
       <div class = "container">
           <a class = "controlbutton left" id="frstbtn">First</a>
           <a class = "controlbutton left" id="prevbtn">Previous</a>
