--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="frame" id="image_display">
       <img>
-      <label id = "page_count">100</label>
+      <p class="overlay" id="page_count">/</p>
     </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
