--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href = "css/style.css" rel = "stylesheet">
   </head>
   <body>
-    <div class="frame" id="image_display">
+    <div class="frame" id="image_display" align="center">
       <img>
       <p class="overlay" id="page_count">/</p>
     </div>
