Added Image zoom and pan...with bugs to be fixed at a later date

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="frame" id="image_display" align="center">
-      <img>
+      <img style="width: auto; height: auto; position: relative; top: 0px; left: 0;">
       <p class="overlay" id="page_count">/</p>
     </div>
     <div class = "controlbar" id = "menubar">	
