updating the extraction algorithm to extract rar and tar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
       </div>
     </div> 
     
-    <script src="js/lib/zip.js"></script>
-    <script src="js/lib/deflate.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/app.js"></script>
+    <script type="application/javascript" src="js/bitjs/archive.js"></script>
+    <script type="application/javascript" src="js/lib/zip.js"></script>
+    <script type="application/javascript" src="js/lib/deflate.js"></script>
+    <script type="application/javascript" src="js/jquery.js"></script>
+    <script type="application/javascript" src="js/app.js"></script>
   </body>
 </html>
