Update application to work with bitjs library

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <p class="overlay" id="page_count">/</p>
     <div class="frame" id="image_display" align="center">
-      <img style="width: auto; height: auto; position: relative; top: 0px; left: 0;">
+      <img class="image" id="current_image">
     </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
