Add new web worker to cache images

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="application/javascript" src="js/lib/zip.js"></script>
     <script type="application/javascript" src="js/lib/deflate.js"></script>
     <script type="application/javascript" src="js/jquery.js"></script>
+    <script type="application/javascript" src="js/fileworker.js"></script>
     <script type="application/javascript" src="js/app.js"></script>
   </body>
 </html>
