--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p class="overlay" id="page_count">/</p>
-    <div class="frame" id="image_display" align="center">
+    <div class="frame" id="image_display">
       <img class="image" id="current_image">
     </div>
     <div class = "controlbar" id = "menubar">	
@@ -17,7 +17,8 @@
           <button type="button" class="btn btn-default btn-sm pull-left" id="prevbtn"><span class="glyphicon glyphicon glyphicon-chevron-left"></span></button>
           <button type="button" class="btn btn-default btn-sm pull-left" id="nextbtn"><span class="glyphicon glyphicon glyphicon-chevron-right"></span></button>
           <button type="button" class="btn btn-default btn-sm pull-left" id="lastbtn"><span class="glyphicon glyphicon glyphicon-step-forward"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="settingbtn"><span class="glyphicon glyphicon glyphicon glyphicon-cog"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-right" id="zoomoutbtn"><img src="img/zoomout.ico" width="12px" height="12px"></button>
+          <button type="button" class="btn btn-default btn-sm pull-right" id="zoominbtn"><img src="img/zoomin.ico" width="12px" height="12px"></button>
           <button type="button" class="btn btn-default btn-sm pull-right" id="openbtn"><span class="glyphicon glyphicon glyphicon-folder-open"></span></button>
       </div>
     </div> 
