update adding new js panzoom plugin

--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
     </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
-          <button type="button" class="btn btn-default btn-sm pull-left" id="frstbtn"><span class="glyphicon glyphicon glyphicon-step-backward"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="prevbtn"><span class="glyphicon glyphicon glyphicon-chevron-left"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="nextbtn"><span class="glyphicon glyphicon glyphicon-chevron-right"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="lastbtn"><span class="glyphicon glyphicon glyphicon-step-forward"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-left" id="lastbtn"><span class="glyphicon glyphicon-step-forward"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-right" id="resetbtn"><span class="glyphicon glyphicon-fullscreen"></span></button>
           <button type="button" class="btn btn-default btn-sm pull-right" id="zoomoutbtn"><img src="img/zoomout.ico" width="12px" height="12px"></button>
           <button type="button" class="btn btn-default btn-sm pull-right" id="zoominbtn"><img src="img/zoomin.ico" width="12px" height="12px"></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="openbtn"><span class="glyphicon glyphicon glyphicon-folder-open"></span></button>
+          <button type="button" class="btn btn-default btn-sm pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
       </div>
     </div> 
     
     <script type="application/javascript" src="js/bitjs/archive.js"></script>
-    <script type="application/javascript" src="js/lib/zip.js"></script>
-    <script type="application/javascript" src="js/lib/deflate.js"></script>
     <script type="application/javascript" src="js/jquery.js"></script>
-    <script type="application/javascript" src="js/fileworker.js"></script>
+    <script type="application/javascript" src="js/jquery-panzoom.js"></script>
     <script type="application/javascript" src="js/app.js"></script>
   </body>
 </html>
