update UI to have a more elegent feel

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UFT-8">
     <title>Comic Viewer</title>
-    <link href = "css/bootstrap.min.css" rel = "stylesheet">
+    <link href = "css/bootstrap.css" rel = "stylesheet">
     <link href = "css/style.css" rel = "stylesheet">
   </head>
   <body>
@@ -13,14 +13,14 @@
     </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
-          <button type="button" class="btn btn-default btn-sm pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-left" id="lastbtn"><span class="glyphicon glyphicon-step-forward"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="resetbtn"><span class="glyphicon glyphicon-fullscreen"></span></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="zoomoutbtn"><img src="img/zoomout.ico" width="12px" height="12px"></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="zoominbtn"><img src="img/zoomin.ico" width="12px" height="12px"></button>
-          <button type="button" class="btn btn-default btn-sm pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-left" id="lastbtn"><span class="glyphicon glyphicon-step-forward"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-right" id="resetbtn"><span class="glyphicon glyphicon-fullscreen"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-right" id="zoomoutbtn"><span class="glyphicon glyphicon-zoom-out"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-right" id="zoominbtn"><span class="glyphicon glyphicon-zoom-in"></span></button>
+          <button type="button" class="btn btn-default btn-lg pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
       </div>
     </div> 
     
