--- a/index.html
+++ b/index.html
@@ -11,16 +11,38 @@
     <div class="frame" id="image_display">
       <img class="image" id="current_image">
     </div>
+    <div class = "helpscreen" id = "helpscreen">
+      <strong>KEY BINDINGS</strong>
+        <div class = "row">
+          <div class = "col-xs-6 col-sm-6">
+            <ul class="list-group">
+              <li class="list-group-item:first-child"><b>First Page</b> : <span class="glyphicon glyphicon-step-backward"></span> : <b>F Key</b></li>
+              <li class="list-group-item"><b>Next Page</b> : <span class="glyphicon glyphicon-chevron-left"></span> : <b>Right Key</b></li>
+              <li class="list-group-item"><b>Previous Page</b> : <span class="glyphicon glyphicon-chevron-right"></span> : <b>Left Key</b></li>
+              <li class="list-group-item:last-child"><b>Last Page</b> : <span class="glyphicon glyphicon-step-forward"></span> : <b>L Key</b></li>
+            </ul>
+          </div>
+          <div class = "col-xs-6 col-sm-6">
+            <ul class="list-group">
+              <li class="list-group-item:first-child"><b>Open File</b> : <span class="glyphicon glyphicon-folder-open"></span> : <b>O Key</b></li>
+              <li class="list-group-item"><b>Zoom In</b> : <span class="glyphicon glyphicon-zoom-in"></span> : <b>+ or = Key</b></li>
+              <li class="list-group-item"><b>Zoom Out</b> : <span class="glyphicon glyphicon-zoom-out"></span> : <b>- or _ Key</b></li>
+              <li class="list-group-item:last-child"><b>Reset Image</b> : <span class="glyphicon glyphicon-repeat"></span> : <b>R Key</b></li>
+            </ul>
+          </div>  
+        </div>
+    </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
-          <button type="button" class="btn btn-default btn-lg pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-left" id="lastbtn"><span class="glyphicon glyphicon-step-forward"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-right" id="resetbtn"><span class="glyphicon glyphicon-fullscreen"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-right" id="zoomoutbtn"><span class="glyphicon glyphicon-zoom-out"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-right" id="zoominbtn"><span class="glyphicon glyphicon-zoom-in"></span></button>
-          <button type="button" class="btn btn-default btn-lg pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-left" id="lastbtn"><span class="glyphicon glyphicon-step-forward"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-right" id="resetbtn"><span class="glyphicon glyphicon-repeat"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-right" id="zoomoutbtn"><span class="glyphicon glyphicon-zoom-out"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-right" id="zoominbtn"><span class="glyphicon glyphicon-zoom-in"></span></button>
+        <button type="button" class="btn btn-default btn-lg pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
+        <button type="button" class="btn btn-default btn-lg pagination-centered" id="helpbtn"><span class="glyphicon glyphicon-question-sign"></span></button>
       </div>
     </div> 
     
