--- a/index.html
+++ b/index.html
@@ -13,43 +13,20 @@
     <div class="frame" id="image_display">
       <img class="image" id="current_image">
     </div>
-    <div class = "helpscreen" id = "helpscreen">
-      <strong>KEY BINDINGS</strong>
-      <div class = "row">
-        <div class = "col-xs-6 col-sm-6">
-          <b>First Page</b> : <span class="glyphicon glyphicon-step-backward"></span> : <b>F Key</b>
-        </div>
-        <div class = "col-xs-6 col-sm-6">
-          <b>Open File</b> : <span class="glyphicon glyphicon-folder-open"></span> : <b>O Key</b>
-        </div>
-      </div>
-      <div class = "row">
-        <div class = "col-xs-6 col-sm-6">
-          <b>Next Page</b> : <span class="glyphicon glyphicon-chevron-left"></span> : <b>Right Key</b>
-        </div>
-        <div class = "col-xs-6 col-sm-6">
-          <b>Zoom In</b> : <span class="glyphicon glyphicon-zoom-in"></span> : <b>+ or = Key</b>
-        </div>
-      </div>
-      <div class = "row">
-        <div class = "col-xs-6 col-sm-6">
-          <b>Previous Page</b> : <span class="glyphicon glyphicon-chevron-right"></span> : <b>Left Key</b>
-        </div>
-        <div class = "col-xs-6 col-sm-6">
-          <b>Zoom Out</b> : <span class="glyphicon glyphicon-zoom-out"></span> : <b>- or _ Key</b>
-        </div>
-      </div>
-      <div class = "row">
-        <div class = "col-xs-6 col-sm-6">
-          <b>Last Page</b> : <span class="glyphicon glyphicon-step-forward"></span> : <b>L Key</b>
-        </div>
-        <div class = "col-xs-6 col-sm-6">
-          <b>Reset Image</b> : <span class="glyphicon glyphicon-repeat"></span> : <b>R Key</b>
-        </div>
-      </div>
-    </div>
+    
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
+        <div class="helpscreen" id = "helpscreen">
+        	<div class = "cont pull-left">(F) <br> First Page</div>
+			<div class = "cont pull-left">(&larr;) <br> Prev. Page</div>
+			<div class = "cont pull-left">(&rarr;) <br> Next Page</div>
+			<div class = "cont pull-left">(L) <br> Last Page</div>
+			<div class = "cont2 end pull-right">(R) <br> Reset Image</div>
+			<div class = "cont2 pull-right">(+ or =) <br> Zoom Out</div>
+			<div class = "cont2 pull-right">(- or _) <br> Zoom In</div>
+			<div class = "cont2 pull-right">(O) <br> Open File</div>
+			<div class = "cont-help">Help</div>
+        </div>
         <button type="button" class="btn btn-default btn-lg pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
@@ -61,7 +38,6 @@
         <button type="button" class="btn btn-default btn-lg pagination-centered" id="helpbtn"><span class="glyphicon glyphicon-question-sign"></span></button>
       </div>
     </div> 
-    
     <script type="application/javascript" src="js/bitjs/archive.js"></script>
     <script type="application/javascript" src="js/jquery.js"></script>
     <script type="application/javascript" src="js/jquery-panzoom.js"></script>
