--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UFT-8">
     <title>Comic Viewer</title>
     <link href = "css/bootstrap.css" rel = "stylesheet">
-    <link href = "css/style.css" rel = "stylesheet">
+    <link href = "css/style.css" rel = "stylesheet"/>
   </head>
   <body>
+
     <div class="overlay" id="page_count">
       <img src="img/spinner.gif">
     </div>
@@ -14,19 +15,26 @@
       <img class="image" id="current_image">
     </div>
     
+    <div class="centerize gotoscreen" id= "gotoscreen">
+    </div>
+
+    <div class="helpscreen" id = "helpscreen">
+      <div class = "container">
+        <div class = "cont pull-left">(F) <br> First Page</div>
+        <div class = "cont pull-left">(&larr;) <br> Prev. Page</div>
+        <div class = "cont pull-left">(&rarr;) <br> Next Page</div>
+        <div class = "cont pull-left">(L) <br> Last Page</div>
+        <div class = "cont2 end pull-right">(R) <br> Reset Image</div>
+        <div class = "cont2 pull-right">(+ or =) <br> Zoom Out</div>
+        <div class = "cont2 pull-right">(- or _) <br> Zoom In</div>
+        <div class = "cont2 pull-right">(O) <br> Open File</div>
+        <div class = "cont2">Goto Page</div>
+        <div class = "cont-help">Help</div>
+        <div class = "cont2">Settings</div>
+      </div>
+    </div>
     <div class = "controlbar" id = "menubar">	
       <div class = "container">
-        <div class="helpscreen" id = "helpscreen">
-        	<div class = "cont pull-left">(F) <br> First Page</div>
-			<div class = "cont pull-left">(&larr;) <br> Prev. Page</div>
-			<div class = "cont pull-left">(&rarr;) <br> Next Page</div>
-			<div class = "cont pull-left">(L) <br> Last Page</div>
-			<div class = "cont2 end pull-right">(R) <br> Reset Image</div>
-			<div class = "cont2 pull-right">(+ or =) <br> Zoom Out</div>
-			<div class = "cont2 pull-right">(- or _) <br> Zoom In</div>
-			<div class = "cont2 pull-right">(O) <br> Open File</div>
-			<div class = "cont-help">Help</div>
-        </div>
         <button type="button" class="btn btn-default btn-lg pull-left" id="frstbtn"><span class="glyphicon glyphicon-step-backward"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-left" id="prevbtn"><span class="glyphicon glyphicon-chevron-left"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-left" id="nextbtn"><span class="glyphicon glyphicon-chevron-right"></span></button>
@@ -35,7 +43,9 @@
         <button type="button" class="btn btn-default btn-lg pull-right" id="zoomoutbtn"><span class="glyphicon glyphicon-zoom-out"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-right" id="zoominbtn"><span class="glyphicon glyphicon-zoom-in"></span></button>
         <button type="button" class="btn btn-default btn-lg pull-right" id="openbtn"><span class="glyphicon glyphicon-folder-open"></span></button>
-        <button type="button" class="btn btn-default btn-lg pagination-centered" id="helpbtn"><span class="glyphicon glyphicon-question-sign"></span></button>
+        <button type="button" class="btn btn-default btn-lg" id="gotobtn"><span class="glyphicon glyphicon-search"></span></button>
+        <button type="button" class="btn btn-default btn-lg" id="helpbtn"><span class="glyphicon glyphicon-question-sign"></span></button>
+        <button type="button" class="btn btn-default btn-lg" id="settingsbtn"><span class="glyphicon glyphicon-cog"></span></button>
       </div>
     </div> 
     <script type="application/javascript" src="js/bitjs/archive.js"></script>
